package sample;

import java.util.ArrayList;

public class Global_errors {
    NumericalMethods yo = new NumericalMethods();

}
