@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        ~ N : float
        ~ N0 : float
        ~ Xo : float
        ~ Yo : float
        ~ h : float
        ~ methodchoosinglist : ObservableList<String>
        - Euler : CheckBox
        - GerrorEuler : CheckBox
        - GerrorImpeuler : CheckBox
        - GerrorRunge : CheckBox
        - Impeuler : CheckBox
        - LerrorEuler : CheckBox
        - LerrorImpeuler : CheckBox
        - LerrorRunge : CheckBox
        - Line_chart : LineChart<Float, Float>
        - M : ChoiceBox<String>
        - N0_text : TextField
        - Runge : CheckBox
        - Xo_text : TextField
        - exact_choice : CheckBox
        - h_text : TextField
        - x : CategoryAxis
        - x_text : TextField
        - y : NumberAxis
        - yo_text : TextField
        + draw()
        - initialize()
    }
  }
  

  namespace sample {
    class sample.Errors {
        + Errors()
    }
  }
  

  namespace sample {
    class sample.Global_errors {
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  namespace sample {
    class sample.NumericalMethods {
        + Euler_globalerror()
        + Euler_localerror()
        + ImpEuler_globalerror()
        + ImpEuler_localerror()
        + NumericalMethods()
        + Range_globalerror()
        + X_values_gerror()
        + eulerMethod()
        + exactSolution()
        + improvedeEulerMethod()
        + rungeKuttaMethod()
        + runge_localerror()
        + solution()
        + x_values()
        ~ equation_helper()
    }
  }
  

  sample.Controller o-- sample.Errors : Er
  sample.Controller o-- sample.Global_errors : Ger
  sample.Controller o-- sample.NumericalMethods : Nm
  sample.Errors o-- sample.NumericalMethods : hello
  sample.Global_errors o-- sample.NumericalMethods : yo
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
